# lsif-os

./: .gitignore  Cargo.toml  README.md  build.rs  clone_parsers.sh  rustfmt.toml  steps.md
.github/workflows/: rust.yml
benches/: benchmark.rs
queries/: graphql.scm  java.scm  javascript.scm  try_type_checker.scm  typescript.scm
src/: cli.rs  main.rs  query_tests.rs
src/analyzer/: analyzer.rs  ffi.rs  file_utils.rs  language_tools.rs  lsif_data_cache.rs  mod.rs  utils.rs
src/emitter/: emitter.rs  file_emitter.rs  mod.rs
src/indexer/: indexer.rs
src/language_tools/: mod.rs
src/protocol/: mod.rs  types.rs
src/tests/: helpers.rs  mod.rs
src/tests/test_data/typescript/: index.ts
